--- a/刷题/二叉树.md
+++ b/刷题/二叉树.md
@@ -244,3 +244,14 @@ public:
 | [102. 二叉树的层序遍历](https://leetcode.cn/problems/binary-tree-level-order-traversal/) | 2022-6-12 16:56:39 | 中等 | 6min，简单 res.push_back(tmp); // 添加到res后面就是从上往下的层序遍历 |
 | [107. 二叉树的层序遍历 II](https://leetcode.cn/problems/binary-tree-level-order-traversal-ii/) | 2022-6-12 16:50:04 | 中等 | 这个是从下往上的层序遍历！没做出来！！！ res.insert(res.begin(), tmp); // 添加到开头就是从下往上的层序遍历！！！ |
 
+
+
+### 困难题
+
+| 题目                                                         | 时间               | 难度 | 备注                                                         |
+| ------------------------------------------------------------ | ------------------ | ---- | ------------------------------------------------------------ |
+| [124. 二叉树中的最大路径和](https://leetcode.cn/problems/binary-tree-maximum-path-sum/) | 2022-6-14 07:46:15 | 困难 | 不会，这题不错，多看看 TODO                                  |
+| [117. 填充每个节点的下一个右侧节点指针 II](https://leetcode.cn/problems/populating-next-right-pointers-in-each-node-ii/) | 2022-6-14 08:13:46 | 中等 | 50min, 做了两次，第一次：花了20min，做的太麻烦，二叉树不是完全二叉树，不好用递归<br />第二次：又花了24min，层序遍历一下就写出来了，但是一直不对，后面找了好久，终于发现是因为Node* pre; 没有初始化为nullptr，所以后面循环的时候，判断pre是否为空的时候，pre里面还存了前值<br />所以指针一定要初始化为 nullptr!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! |
+|                                                              |                    |      |                                                              |
+|                                                              |                    |      |                                                              |
+|                                                              |                    |      |                                                              |
