--- a/刷题/杂项.md
+++ b/刷题/杂项.md
@@ -76,7 +76,7 @@ https://labuladong.github.io/algo/2/18/23/
 | [204. 计数质数](https://leetcode.cn/problems/count-primes/)  | 2022-6-11 10:54:26 | 中等 | todo，精妙解法再看看                                      |
 | [66. 加一](https://leetcode.cn/problems/plus-one/)           | 2022-6-11 11:20:26 | 简单 | 2022-6-11 11:20:26                                        |
 | [118. 杨辉三角](https://leetcode.cn/problems/pascals-triangle/) | 2022-6-12 16:06:31 | 简单 | 22min，因为一个vector初始化问题没有给大小，找了好久的原因 |
-|                                                              |                    |      |                                                           |
+| [171. Excel 表列序号](https://leetcode.cn/problems/excel-sheet-column-number/) | 2022-6-13 21:50:19 | 简单 | 10min，将26个字母映射到26进制                             |
 
 
 
