--- a/刷题/输入输出总结.md
+++ b/刷题/输入输出总结.md
@@ -6,7 +6,7 @@ cin >> str; // 输入 'hello world' str只能得到hello，遇到空格或者回
 
 char a[50];
 cin >> a; // hello world
-cout << a; // hello 包含空格？ TODO
+cout << a; // hello 不包含空格
 
 // gets读取，C语言中的函数
 char a[50];
@@ -49,6 +49,8 @@ cin.getline(c, 50);
 
 **解决方案：**使用不带任何参数的变体cin.get()，读取下一个字符。即，使用cin.get()跳过这个换行符，使得下一次cin.get()能够从换行符之后开始读取。
 
+解决方案：dz 不用这个cin.get(), 直接getline()
+
 ```c++
 cin.get(c,20);
 cin.get();               
@@ -70,12 +72,20 @@ cin.getline(c,20).getline(b,20);
 
 ```c++
 // string考虑getline()
-getline(cin, str);
+str = cin.getline(); // 这种不行，编译不通过！
+cin.getline(str); // 也不行，编译不通过！
+getline(cin, str); // 这个直接是函数了，不是cin对象的成员函数了
+```
+
+```c++
+// cin只有这两种重载的getline函数
+istream& getline (char* s, streamsize n );
+istream& getline (char* s, streamsize n, char delim );
 ```
 
 
 
-#### 输入的测试样例有多组，每组需要相同逻辑的处理：
+#### 输入的测试样例有多组，每组需要相同逻辑的处理：这种用格式化输入就简单很多！
 
 ```c++
 while(scanf("%d %d",&a, &b) != EOF){ // EOF=-1
@@ -111,6 +121,7 @@ getchar() 和 cin.get()都是获取输入中的一个字符
 while(cin>>A[i] && getchar()!='\n'){
 	i += 1;
 }
+// 或者
 while(cin>>A[i] && cin.get()!='\n'){
 	i += 1;
 }
@@ -166,10 +177,10 @@ getline(cin, str2);
 #### stringsteam(string输入输出流)
 
 ```c++
-#include<sstream>
+#include<sstream> // 注意，要包含这个头文件
 string ip = "1.2.3.4";
 stringstream ss;
-ss << ip;
+ss << ip; // 将string变成流
 unsigned a, b, c, d;
 char c1, c2, c3; // 接收点
 ss >> a >> c1 >> b >> c2 >> c >> c3 >> d; // 流输出数组和字符
@@ -181,5 +192,33 @@ ss >> a >> c1 >> b >> c2 >> c >> c3 >> d; // 流输出数组和字符
 ss.clear();
 // 输出可以使用str()
 cout << ss.str() << endl;
+```
+
+
+
+##### 还可以用于分割字符串
+
+```c++
+#include<iostream>  
+#include<sstream>        //istringstream 必须包含这个头文件
+#include<string>  
+using namespace std;  
+int main(){  
+    string str="i am a boy";  
+    istringstream is(str);  
+    string s;  
+    while(is>>s)  {  
+        cout<<s<<endl;  
+    }  
+} 
+```
+
+输出：
+
+```
+i
+am
+a
+boy
 ```
 
