--- a/杂项.md
+++ b/杂项.md
@@ -132,3 +132,34 @@ https://juejin.cn/post/6844904193170341896
 单词
 
 order-of-magnitude 数量级
+
+
+
+
+
+##### GitHub创建新库之后，推送本地库上去
+
+```bash
+git remote add origin git@github.com:wjsgtxy/scidb_rdma.git
+git branch -M main # 将本地的master分支更名为main分支！
+git push -u origin main
+```
+
+```bash
+$ git push -u origin main
+Enumerating objects: 9835, done.
+Counting objects: 100% (9835/9835), done.
+Delta compression using up to 8 threads
+Compressing objects: 100% (4966/4966), done.
+Writing objects: 100% (9835/9835), 38.02 MiB | 1.66 MiB/s, done.
+Total 9835 (delta 4608), reused 9743 (delta 4563), pack-reused 0
+remote: Resolving deltas: 100% (4608/4608), done.
+remote: warning: See http://git.io/iEPt8g for more information.
+remote: warning: File tests/basic/other/apply.sp.afl.res is 51.12 MB; this is larger than GitHub's recommended maximum file size of 50.00 MB
+remote: warning: GH001: Large files detected. You may want to try Git Large File Storage - https://git-lfs.github.com.
+To github.com:wjsgtxy/scidb_rdma.git
+ * [new branch]      main -> main
+Branch 'main' set up to track remote branch 'main' from 'origin'.
+```
+
+注意：上面提示了，有个大文件：tests/basic/other/apply.sp.afl.res
