--- a/刷题/二叉树.md
+++ b/刷题/二叉树.md
@@ -255,3 +255,41 @@ public:
 |                                                              |                    |      |                                                              |
 |                                                              |                    |      |                                                              |
 |                                                              |                    |      |                                                              |
+
+
+
+#### 建树模板
+
+```c++
+struct TreeNode {
+    int val;
+    TreeNode *left;
+    TreeNode *right;
+    TreeNode(int x) : val(x), left(nullptr), right(nullptr) {} 
+};
+
+TreeNode *Construct_Tree(vector<int> v)
+{
+    int n = v.size();
+    if (n == 0) {
+        return nullptr;
+    }
+    vector<TreeNode*> vecTree;
+    for (int i = 0; i < n; i++) {
+        if (v[i] == -1) {   // 空节点
+            vecTree[i] = nullptr;
+        } else {
+            vecTree[i] = new TreeNode(v[i]);
+        }
+    }
+    TreeNode *root = vecTree[0];
+    for (int i = 0; i * 2 + 2 < n; i++) {
+        if (vecTree[i]) {
+            vecTree[i]->left = vecTree[i * 2 + 1];
+            vecTree[i]->right = vecTree[i * 2 + 2];
+        }
+    }
+    return root;
+}
+```
+
