--- a/刷题/图.md
+++ b/刷题/图.md
@@ -21,11 +21,51 @@
 
 不过以我的经验呢，像网络流这种问题，你又不是打竞赛的，没时间的话就没必要学了；像 [最小生成树](https://labuladong.github.io/algo/2/20/52/) 和 [最短路径问题](https://labuladong.github.io/algo/2/20/54/)，虽然从刷题的角度用到的不多，但它们属于经典算法，学有余力可以掌握一下；像 [二分图判定](https://labuladong.github.io/algo/2/20/49/)、拓扑排序这一类，属于比较基本且有用的算法，应该比较熟练地掌握。
 
-| 题目                                                         | 时间              | 难度 | 备注                                                         |
-| ------------------------------------------------------------ | ----------------- | ---- | ------------------------------------------------------------ |
-| [207. 课程表](https://leetcode.cn/problems/course-schedule/) | 2022-6-4 11:06:25 | 中等 | 30min，基础的dfs判断图是否有环，将题目的东西转换成图的连接表，再做做 |
-| [210. 课程表 II](https://leetcode.cn/problems/course-schedule-ii/) |                   | 中等 |                                                              |
-|                                                              |                   |      |                                                              |
-|                                                              |                   |      |                                                              |
+##### 
+
+| 题目                                                         | 时间                   | 难度 | 备注                                                         |
+| ------------------------------------------------------------ | ---------------------- | ---- | ------------------------------------------------------------ |
+| [207. 课程表](https://leetcode.cn/problems/course-schedule/) | 2022-6-4 11:06:25      | 中等 | 30min，基础的dfs判断图是否有环，将题目的东西转换成图的连接表，再做做 |
+| [210. 课程表 II](https://leetcode.cn/problems/course-schedule-ii/) | 2022年7月31日 12:10:16 | 中等 | 看了文章的模板写的，再做做。[补充题：检测循环依赖](https://mp.weixin.qq.com/s/pCRscwKqQdYYN7M1Sia7xA) |
+|                                                              |                        |      |                                                              |
+|                                                              |                        |      |                                                              |
 
 **后序遍历的这一特点很重要，之所以拓扑排序的基础是后序遍历，是因为一个任务必须等到它依赖的所有任务都完成之后才能开始开始执行**。
+
+
+
+#### 拓扑排序模板：检测循环依赖
+
+```c++
+vector<int> haveCircularDependency(int n, vector<vector<int>> &prerequisites) {
+    vector<vector<int>> g(n); //邻接表存储图结构
+    vector<int> indeg(n); //每个点的入度
+    vector<int> res; //存储结果序列
+    for(int i = 0; i < prerequisites.size(); i ++) {
+        int a = prerequisites[i][0], b = prerequisites[i][1]; 
+        g[a].push_back(b);
+        indeg[b] ++; // 注意，这里是b的入度++
+    }
+    queue<int> q;
+    //一次性将入度为0的点全部入队
+    for(int i = 0; i < n; i ++) {
+        if(indeg[i] == 0) q.push(i);
+    }
+    while(q.size()) {
+        int t = q.front();
+        q.pop();
+        res.push_back(t);
+        //删除边时，将终点的入度-1。若入度为0，果断入队
+        for(int i = 0; i < g[t].size(); i ++) {
+            int j = g[t][i];
+            indeg[j] --;
+            if(indeg[j] == 0) {
+                q.push(j);
+            }
+        }
+    }
+    if(res.size() == n) return res;
+    else return {};
+}
+```
+
